Revert "[PATCH] Refactoring of PostgresqlPlugin"
This reverts commit 9ef24685a0baaf16743a0e3fa5a719f42780a4fe.

That should make someone happy...